06/10/21
FixedCalculator
    advancedExpressions - added while loop for incorrect input